# solana_test

./: Cargo.toml  README.md  config_balance.yaml  config_blocks.yaml  config_send.yaml  deposit_contract.rs
src/balance/: main.rs
src/blocks/: main.rs
src/send/: main.rs
wallets/: sender1.json  sender2.json  sender3.json
