[package]
name = "solana_test"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "balance"
path = "src/balance/main.rs"

[[bin]]
name = "send"
path = "src/send/main.rs"

[[bin]]
name = "blocks"
path = "src/blocks/main.rs"

[dependencies]
anyhow = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
solana-client = "2.1"
solana-sdk = "2.1"
tokio = { version = "1", features = ["full"] }
yellowstone-grpc-client = "5.1"
yellowstone-grpc-proto = "5.1"
